vemo-app/main/default/objects/GlobalSettings__c/GlobalSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>GlobalSettings</label>
</CustomObject>