vemo-app/main/default/objects/GlobalSettings__c/fields/AllowTestStudent__c.field-meta.xml
<CustomField>
    <fullName>AllowTestStudent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is checked, the api will allow login to bypass the decryption process of the VEMO_AUTH param</description>
    <inlineHelpText>If this field is checked, the api will allow login to bypass the decryption process of the VEMO_AUTH param</inlineHelpText>
    <label>Allow testStudent via API</label>
    <type>Checkbox</type>
</CustomField>