vemo-app/main/default/objects/GlobalSettings__c/fields/AttachmentDownloadPrefix__c.field-meta.xml
<CustomField>
    <fullName>AttachmentDownloadPrefix__c</fullName>
    <defaultValue>"https://vemo--dev1--c.cs2.content.force.com/servlet/servlet.FileDownload?file="</defaultValue>
    <label>Attachment Download Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>