vemo-app/main/default/objects/GlobalSettings__c/fields/ClosedWonCaseQueue__c.field-meta.xml
<CustomField>
    <fullName>ClosedWonCaseQueue__c</fullName>
    <defaultValue>"Origination"</defaultValue>
    <description>This is the name of the queue for which cases will automatically be created when an opportunity goes to closed won</description>
    <inlineHelpText>This is the name of the queue for which cases will automatically be created when an opportunity goes to closed won</inlineHelpText>
    <label>ClosedWonCaseQueue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>