vemo-app/main/default/objects/GlobalSettings__c/fields/DebugLevel__c.field-meta.xml
<CustomField>
    <fullName>DebugLevel__c</fullName>
    <defaultValue>"DEBUG"</defaultValue>
    <inlineHelpText>Choose NONE, FINE, DEBUG, or CRITICAL</inlineHelpText>
    <label>Debug Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>