vemo-app/main/default/objects/GlobalSettings__c/fields/DocumentDownloadPrefix__c.field-meta.xml
<CustomField>
    <fullName>DocumentDownloadPrefix__c</fullName>
    <defaultValue>"https://vemo--dev2--c.cs44.content.force.com/servlet/servlet.ImageServer?id="</defaultValue>
    <label>Document Download Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>