vemo-app/main/default/objects/GlobalSettings__c/fields/EmailNotifications__c.field-meta.xml
<CustomField>
    <fullName>EmailNotifications__c</fullName>
    <defaultValue>true</defaultValue>
    <label>EmailNotifications</label>
    <type>Checkbox</type>
</CustomField>