vemo-app/main/default/objects/GlobalSettings__c/fields/OAuthUtilConsumerID__c.field-meta.xml
<CustomField>
    <fullName>OAuthUtilConsumerID__c</fullName>
    <label>OAuthUtilConsumerID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>