vemo-app/main/default/objects/GlobalSettings__c/fields/OAuthUtilConsumerSecret__c.field-meta.xml
<CustomField>
    <fullName>OAuthUtilConsumerSecret__c</fullName>
    <label>OAuthUtilConsumerSecret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>