vemo-app/main/default/objects/GlobalSettings__c/fields/OAuthUtilEndpoint__c.field-meta.xml
<CustomField>
    <fullName>OAuthUtilEndpoint__c</fullName>
    <inlineHelpText>'test' or 'prod' (without quotes)</inlineHelpText>
    <label>OAuthUtilEndpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>