vemo-app/main/default/objects/GlobalSettings__c/fields/OAuthUtilPassword__c.field-meta.xml
<CustomField>
    <fullName>OAuthUtilPassword__c</fullName>
    <inlineHelpText>Include security token if applicable</inlineHelpText>
    <label>OAuthUtilPassword</label>
    <length>255</length>
    <type>Text</type>
</CustomField>