vemo-app/main/default/objects/GlobalSettings__c/fields/OAuthUtilUserID__c.field-meta.xml
<CustomField>
    <fullName>OAuthUtilUserID__c</fullName>
    <label>OAuthUtilUserID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>