vemo-app/main/default/objects/GlobalSettings__c/fields/ValidationRules__c.field-meta.xml
<CustomField>
    <fullName>ValidationRules__c</fullName>
    <defaultValue>true</defaultValue>
    <label>ValidationRules</label>
    <type>Checkbox</type>
</CustomField>