vemo-app/main/default/objects/GlobalSettings__c/fields/VemoAccountID__c.field-meta.xml
<CustomField>
    <fullName>VemoAccountID__c</fullName>
    <label>VemoAccountID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>