vemo-app/main/default/objects/GlobalSettings__c/fields/WorkflowRules__c.field-meta.xml
<CustomField>
    <fullName>WorkflowRules__c</fullName>
    <defaultValue>true</defaultValue>
    <label>WorkflowRules</label>
    <type>Checkbox</type>
</CustomField>